ilb.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortio-0
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: internal-app
